// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaskDetails should render complete status 1`] = `
<StyledCheckbox
  checked={true}
  disabled={true}
  onChange={[Function]}
/>
`;

exports[`TaskDetails should render correctly w/o patient and subtasks 1`] = `
<DetailsContainer>
  <StickyContainer>
    <DetailsBox>
      <DetailsHeader>
        <BookmarkContainer>
          <Bookmark
            disabled={false}
            isActive={false}
            onClick={[Function]}
          />
        </BookmarkContainer>
        <StatusContainer>
          Status 
          <StatusSelect
            disabled={false}
            onChange={[Function]}
            options={
              Array [
                Object {
                  "description": "In Progress",
                  "value": "IN_PROGRESS",
                },
                Object {
                  "description": "On Hold",
                  "value": "ON_HOLD",
                },
                Object {
                  "description": "Blocked",
                  "value": "BLOCKED",
                },
              ]
            }
            value="IN_PROGRESS"
          />
        </StatusContainer>
        <StyledCloseButton
          onClick={[MockFunction]}
        >
          ✕
        </StyledCloseButton>
      </DetailsHeader>
      <table>
        <tr>
          <StyledLabel>
            <strong>
              Assigned to 
            </strong>
          </StyledLabel>
          <StyledDescription>
            <Connect(MemberPicker)
              disabled={false}
              member={
                Object {
                  "firstName": "John",
                  "initials": "JS",
                  "lastName": "Smith",
                }
              }
              task={
                Object {
                  "assignedBy": Object {
                    "firstName": "Janet",
                    "lastName": "Cook",
                  },
                  "assignedTo": Object {
                    "firstName": "John",
                    "initials": "JS",
                    "lastName": "Smith",
                  },
                  "comments": Array [],
                  "description": "Just do it.",
                  "dueDate": "",
                  "patient": null,
                  "status": "INCOMPLETE",
                  "subtasks": null,
                  "taskId": 0,
                  "workflowStatus": "IN_PROGRESS",
                }
              }
            />
          </StyledDescription>
        </tr>
        <tr>
          <StyledLabel>
            <StyledCheckbox
              checked={false}
              disabled={false}
              onChange={[Function]}
            />
          </StyledLabel>
          <StyledDescription>
            Just do it.
          </StyledDescription>
        </tr>
        <tr>
          <StyledLabel>
            Patient 
          </StyledLabel>
          <StyledDescription>
            <Connect(PatientAssignment)
              patient={null}
              task={
                Object {
                  "assignedBy": Object {
                    "firstName": "Janet",
                    "lastName": "Cook",
                  },
                  "assignedTo": Object {
                    "firstName": "John",
                    "initials": "JS",
                    "lastName": "Smith",
                  },
                  "comments": Array [],
                  "description": "Just do it.",
                  "dueDate": "",
                  "patient": null,
                  "status": "INCOMPLETE",
                  "subtasks": null,
                  "taskId": 0,
                  "workflowStatus": "IN_PROGRESS",
                }
              }
            />
          </StyledDescription>
        </tr>
      </table>
    </DetailsBox>
    <DetailsBox
      style={
        Object {
          "marginTop": 4,
        }
      }
    >
      <StyledLabel
        style={
          Object {
            "lineHeight": "30px",
            "verticalAlign": "top",
          }
        }
      >
        <strong>
          Comments 
        </strong>
      </StyledLabel>
      <StyledDescription>
        <Comments
          comments={Array []}
          disabled={false}
          submit={[MockFunction]}
          userId={142}
        />
      </StyledDescription>
    </DetailsBox>
    <DetailsBox>
      <table>
        <tr>
          <StyledLabel>
            <strong>
              Filed in
            </strong>
          </StyledLabel>
          <StyledDescription>
            <Connect(ListPicker)
              disabled={false}
              task={
                Object {
                  "assignedBy": Object {
                    "firstName": "Janet",
                    "lastName": "Cook",
                  },
                  "assignedTo": Object {
                    "firstName": "John",
                    "initials": "JS",
                    "lastName": "Smith",
                  },
                  "comments": Array [],
                  "description": "Just do it.",
                  "dueDate": "",
                  "patient": null,
                  "status": "INCOMPLETE",
                  "subtasks": null,
                  "taskId": 0,
                  "workflowStatus": "IN_PROGRESS",
                }
              }
            />
          </StyledDescription>
        </tr>
        <tr>
          <StyledLabel>
            <strong>
              Due date
            </strong>
          </StyledLabel>
          <StyledDescription>
            <Connect(DetailsDueDate)
              completed={false}
              task={
                Object {
                  "assignedBy": Object {
                    "firstName": "Janet",
                    "lastName": "Cook",
                  },
                  "assignedTo": Object {
                    "firstName": "John",
                    "initials": "JS",
                    "lastName": "Smith",
                  },
                  "comments": Array [],
                  "description": "Just do it.",
                  "dueDate": "",
                  "patient": null,
                  "status": "INCOMPLETE",
                  "subtasks": null,
                  "taskId": 0,
                  "workflowStatus": "IN_PROGRESS",
                }
              }
            />
          </StyledDescription>
        </tr>
        <tr>
          <StyledLabel>
            <strong>
              Reminder
            </strong>
          </StyledLabel>
          <StyledDescription>
            <Connect(Reminder)
              completed={false}
              task={
                Object {
                  "assignedBy": Object {
                    "firstName": "Janet",
                    "lastName": "Cook",
                  },
                  "assignedTo": Object {
                    "firstName": "John",
                    "initials": "JS",
                    "lastName": "Smith",
                  },
                  "comments": Array [],
                  "description": "Just do it.",
                  "dueDate": "",
                  "patient": null,
                  "status": "INCOMPLETE",
                  "subtasks": null,
                  "taskId": 0,
                  "workflowStatus": "IN_PROGRESS",
                }
              }
            />
          </StyledDescription>
        </tr>
        <tr>
          <StyledLabel
            style={
              Object {
                "lineHeight": "30px",
                "verticalAlign": "top",
              }
            }
          >
            <strong>
              History
            </strong>
          </StyledLabel>
          <StyledDescription>
            <Connect(History)
              taskId={0}
            />
          </StyledDescription>
        </tr>
      </table>
    </DetailsBox>
    <DetailsBox>
      <Connect(TaskActions)
        taskId={0}
      />
    </DetailsBox>
  </StickyContainer>
</DetailsContainer>
`;

exports[`TaskDetails should render disabled flag 1`] = `
<Bookmark
  disabled={false}
  isActive={false}
  onClick={[Function]}
/>
`;

exports[`TaskDetails should render enabled flag 1`] = `
<Bookmark
  disabled={false}
  isActive={true}
  onClick={[Function]}
/>
`;

exports[`TaskDetails should render incomplete status 1`] = `
<StyledCheckbox
  checked={false}
  disabled={false}
  onChange={[Function]}
/>
`;

exports[`TaskDetails should render patient 1`] = `
<DetailsContainer>
  <StickyContainer>
    <DetailsBox>
      <DetailsHeader>
        <BookmarkContainer>
          <Bookmark
            disabled={false}
            isActive={false}
            onClick={[Function]}
          />
        </BookmarkContainer>
        <StatusContainer>
          Status 
          <StatusSelect
            disabled={false}
            onChange={[Function]}
            options={
              Array [
                Object {
                  "description": "In Progress",
                  "value": "IN_PROGRESS",
                },
                Object {
                  "description": "On Hold",
                  "value": "ON_HOLD",
                },
                Object {
                  "description": "Blocked",
                  "value": "BLOCKED",
                },
              ]
            }
            value="IN_PROGRESS"
          />
        </StatusContainer>
        <StyledCloseButton
          onClick={[MockFunction]}
        >
          ✕
        </StyledCloseButton>
      </DetailsHeader>
      <table>
        <tr>
          <StyledLabel>
            <strong>
              Assigned to 
            </strong>
          </StyledLabel>
          <StyledDescription>
            <Connect(MemberPicker)
              disabled={false}
              member={
                Object {
                  "firstName": "John",
                  "initials": "JS",
                  "lastName": "Smith",
                }
              }
              task={
                Object {
                  "assignedBy": Object {
                    "firstName": "Janet",
                    "lastName": "Cook",
                  },
                  "assignedTo": Object {
                    "firstName": "John",
                    "initials": "JS",
                    "lastName": "Smith",
                  },
                  "comments": Array [],
                  "description": "Just do it.",
                  "dueDate": "",
                  "patient": Object {
                    "firstName": "Jane",
                    "lastName": "Doe",
                    "mrn": "1234567",
                  },
                  "status": "INCOMPLETE",
                  "subtasks": null,
                  "taskId": 0,
                  "workflowStatus": "IN_PROGRESS",
                }
              }
            />
          </StyledDescription>
        </tr>
        <tr>
          <StyledLabel>
            <StyledCheckbox
              checked={false}
              disabled={false}
              onChange={[Function]}
            />
          </StyledLabel>
          <StyledDescription>
            Just do it.
          </StyledDescription>
        </tr>
        <tr>
          <StyledLabel>
            Patient 
          </StyledLabel>
          <StyledDescription>
            <Connect(PatientAssignment)
              patient={
                Object {
                  "firstName": "Jane",
                  "lastName": "Doe",
                  "mrn": "1234567",
                }
              }
              task={
                Object {
                  "assignedBy": Object {
                    "firstName": "Janet",
                    "lastName": "Cook",
                  },
                  "assignedTo": Object {
                    "firstName": "John",
                    "initials": "JS",
                    "lastName": "Smith",
                  },
                  "comments": Array [],
                  "description": "Just do it.",
                  "dueDate": "",
                  "patient": Object {
                    "firstName": "Jane",
                    "lastName": "Doe",
                    "mrn": "1234567",
                  },
                  "status": "INCOMPLETE",
                  "subtasks": null,
                  "taskId": 0,
                  "workflowStatus": "IN_PROGRESS",
                }
              }
            />
          </StyledDescription>
        </tr>
      </table>
    </DetailsBox>
    <DetailsBox
      style={
        Object {
          "marginTop": 4,
        }
      }
    >
      <StyledLabel
        style={
          Object {
            "lineHeight": "30px",
            "verticalAlign": "top",
          }
        }
      >
        <strong>
          Comments 
        </strong>
      </StyledLabel>
      <StyledDescription>
        <Comments
          comments={Array []}
          disabled={false}
          submit={[MockFunction]}
          userId={142}
        />
      </StyledDescription>
    </DetailsBox>
    <DetailsBox>
      <table>
        <tr>
          <StyledLabel>
            <strong>
              Filed in
            </strong>
          </StyledLabel>
          <StyledDescription>
            <Connect(ListPicker)
              disabled={false}
              task={
                Object {
                  "assignedBy": Object {
                    "firstName": "Janet",
                    "lastName": "Cook",
                  },
                  "assignedTo": Object {
                    "firstName": "John",
                    "initials": "JS",
                    "lastName": "Smith",
                  },
                  "comments": Array [],
                  "description": "Just do it.",
                  "dueDate": "",
                  "patient": Object {
                    "firstName": "Jane",
                    "lastName": "Doe",
                    "mrn": "1234567",
                  },
                  "status": "INCOMPLETE",
                  "subtasks": null,
                  "taskId": 0,
                  "workflowStatus": "IN_PROGRESS",
                }
              }
            />
          </StyledDescription>
        </tr>
        <tr>
          <StyledLabel>
            <strong>
              Due date
            </strong>
          </StyledLabel>
          <StyledDescription>
            <Connect(DetailsDueDate)
              completed={false}
              task={
                Object {
                  "assignedBy": Object {
                    "firstName": "Janet",
                    "lastName": "Cook",
                  },
                  "assignedTo": Object {
                    "firstName": "John",
                    "initials": "JS",
                    "lastName": "Smith",
                  },
                  "comments": Array [],
                  "description": "Just do it.",
                  "dueDate": "",
                  "patient": Object {
                    "firstName": "Jane",
                    "lastName": "Doe",
                    "mrn": "1234567",
                  },
                  "status": "INCOMPLETE",
                  "subtasks": null,
                  "taskId": 0,
                  "workflowStatus": "IN_PROGRESS",
                }
              }
            />
          </StyledDescription>
        </tr>
        <tr>
          <StyledLabel>
            <strong>
              Reminder
            </strong>
          </StyledLabel>
          <StyledDescription>
            <Connect(Reminder)
              completed={false}
              task={
                Object {
                  "assignedBy": Object {
                    "firstName": "Janet",
                    "lastName": "Cook",
                  },
                  "assignedTo": Object {
                    "firstName": "John",
                    "initials": "JS",
                    "lastName": "Smith",
                  },
                  "comments": Array [],
                  "description": "Just do it.",
                  "dueDate": "",
                  "patient": Object {
                    "firstName": "Jane",
                    "lastName": "Doe",
                    "mrn": "1234567",
                  },
                  "status": "INCOMPLETE",
                  "subtasks": null,
                  "taskId": 0,
                  "workflowStatus": "IN_PROGRESS",
                }
              }
            />
          </StyledDescription>
        </tr>
        <tr>
          <StyledLabel
            style={
              Object {
                "lineHeight": "30px",
                "verticalAlign": "top",
              }
            }
          >
            <strong>
              History
            </strong>
          </StyledLabel>
          <StyledDescription>
            <Connect(History)
              taskId={0}
            />
          </StyledDescription>
        </tr>
      </table>
    </DetailsBox>
    <DetailsBox>
      <Connect(TaskActions)
        taskId={0}
      />
    </DetailsBox>
  </StickyContainer>
</DetailsContainer>
`;

exports[`TaskDetails should render subtasks 1`] = `
<DetailsContainer>
  <StickyContainer>
    <DetailsBox>
      <DetailsHeader>
        <BookmarkContainer>
          <Bookmark
            disabled={false}
            isActive={false}
            onClick={[Function]}
          />
        </BookmarkContainer>
        <StatusContainer>
          Status 
          <StatusSelect
            disabled={false}
            onChange={[Function]}
            options={
              Array [
                Object {
                  "description": "In Progress",
                  "value": "IN_PROGRESS",
                },
                Object {
                  "description": "On Hold",
                  "value": "ON_HOLD",
                },
                Object {
                  "description": "Blocked",
                  "value": "BLOCKED",
                },
              ]
            }
            value="IN_PROGRESS"
          />
        </StatusContainer>
        <StyledCloseButton
          onClick={[MockFunction]}
        >
          ✕
        </StyledCloseButton>
      </DetailsHeader>
      <table>
        <tr>
          <StyledLabel>
            <strong>
              Assigned to 
            </strong>
          </StyledLabel>
          <StyledDescription>
            <Connect(MemberPicker)
              disabled={false}
              member={
                Object {
                  "firstName": "John",
                  "initials": "JS",
                  "lastName": "Smith",
                }
              }
              task={
                Object {
                  "assignedBy": Object {
                    "firstName": "Janet",
                    "lastName": "Cook",
                  },
                  "assignedTo": Object {
                    "firstName": "John",
                    "initials": "JS",
                    "lastName": "Smith",
                  },
                  "comments": Array [],
                  "description": "Just do it.",
                  "dueDate": "",
                  "patient": null,
                  "status": "INCOMPLETE",
                  "subtasks": Array [
                    Object {
                      "id": 0,
                    },
                    Object {
                      "id": 1,
                    },
                  ],
                  "taskId": 0,
                  "workflowStatus": "IN_PROGRESS",
                }
              }
            />
          </StyledDescription>
        </tr>
        <tr>
          <StyledLabel>
            <StyledCheckbox
              checked={false}
              disabled={false}
              onChange={[Function]}
            />
          </StyledLabel>
          <StyledDescription>
            Just do it.
          </StyledDescription>
        </tr>
        <tr>
          <StyledLabel>
            Patient 
          </StyledLabel>
          <StyledDescription>
            <Connect(PatientAssignment)
              patient={null}
              task={
                Object {
                  "assignedBy": Object {
                    "firstName": "Janet",
                    "lastName": "Cook",
                  },
                  "assignedTo": Object {
                    "firstName": "John",
                    "initials": "JS",
                    "lastName": "Smith",
                  },
                  "comments": Array [],
                  "description": "Just do it.",
                  "dueDate": "",
                  "patient": null,
                  "status": "INCOMPLETE",
                  "subtasks": Array [
                    Object {
                      "id": 0,
                    },
                    Object {
                      "id": 1,
                    },
                  ],
                  "taskId": 0,
                  "workflowStatus": "IN_PROGRESS",
                }
              }
            />
          </StyledDescription>
        </tr>
        <tr>
          <StyledLabel>
            <strong>
              Subtasks (2)
            </strong>
          </StyledLabel>
        </tr>
      </table>
    </DetailsBox>
    <DetailsBox
      style={
        Object {
          "marginTop": 4,
        }
      }
    >
      <StyledLabel
        style={
          Object {
            "lineHeight": "30px",
            "verticalAlign": "top",
          }
        }
      >
        <strong>
          Comments 
        </strong>
      </StyledLabel>
      <StyledDescription>
        <Comments
          comments={Array []}
          disabled={false}
          submit={[MockFunction]}
          userId={142}
        />
      </StyledDescription>
    </DetailsBox>
    <DetailsBox>
      <table>
        <tr>
          <StyledLabel>
            <strong>
              Filed in
            </strong>
          </StyledLabel>
          <StyledDescription>
            <Connect(ListPicker)
              disabled={false}
              task={
                Object {
                  "assignedBy": Object {
                    "firstName": "Janet",
                    "lastName": "Cook",
                  },
                  "assignedTo": Object {
                    "firstName": "John",
                    "initials": "JS",
                    "lastName": "Smith",
                  },
                  "comments": Array [],
                  "description": "Just do it.",
                  "dueDate": "",
                  "patient": null,
                  "status": "INCOMPLETE",
                  "subtasks": Array [
                    Object {
                      "id": 0,
                    },
                    Object {
                      "id": 1,
                    },
                  ],
                  "taskId": 0,
                  "workflowStatus": "IN_PROGRESS",
                }
              }
            />
          </StyledDescription>
        </tr>
        <tr>
          <StyledLabel>
            <strong>
              Due date
            </strong>
          </StyledLabel>
          <StyledDescription>
            <Connect(DetailsDueDate)
              completed={false}
              task={
                Object {
                  "assignedBy": Object {
                    "firstName": "Janet",
                    "lastName": "Cook",
                  },
                  "assignedTo": Object {
                    "firstName": "John",
                    "initials": "JS",
                    "lastName": "Smith",
                  },
                  "comments": Array [],
                  "description": "Just do it.",
                  "dueDate": "",
                  "patient": null,
                  "status": "INCOMPLETE",
                  "subtasks": Array [
                    Object {
                      "id": 0,
                    },
                    Object {
                      "id": 1,
                    },
                  ],
                  "taskId": 0,
                  "workflowStatus": "IN_PROGRESS",
                }
              }
            />
          </StyledDescription>
        </tr>
        <tr>
          <StyledLabel>
            <strong>
              Reminder
            </strong>
          </StyledLabel>
          <StyledDescription>
            <Connect(Reminder)
              completed={false}
              task={
                Object {
                  "assignedBy": Object {
                    "firstName": "Janet",
                    "lastName": "Cook",
                  },
                  "assignedTo": Object {
                    "firstName": "John",
                    "initials": "JS",
                    "lastName": "Smith",
                  },
                  "comments": Array [],
                  "description": "Just do it.",
                  "dueDate": "",
                  "patient": null,
                  "status": "INCOMPLETE",
                  "subtasks": Array [
                    Object {
                      "id": 0,
                    },
                    Object {
                      "id": 1,
                    },
                  ],
                  "taskId": 0,
                  "workflowStatus": "IN_PROGRESS",
                }
              }
            />
          </StyledDescription>
        </tr>
        <tr>
          <StyledLabel
            style={
              Object {
                "lineHeight": "30px",
                "verticalAlign": "top",
              }
            }
          >
            <strong>
              History
            </strong>
          </StyledLabel>
          <StyledDescription>
            <Connect(History)
              taskId={0}
            />
          </StyledDescription>
        </tr>
      </table>
    </DetailsBox>
    <DetailsBox>
      <Connect(TaskActions)
        taskId={0}
      />
    </DetailsBox>
  </StickyContainer>
</DetailsContainer>
`;
